gateway/ingress/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: example
  labels:
    istio.io/rev: asm-managed # kpt-set: ${controlplanerevision}
spec: {}
