gateway/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: istio-ingressgateway # kpt-set: ${name}
  namespace: example
  labels:
    app: istio-ingressgateway # kpt-set: ${name}
    istio: ingressgateway
spec:
  ports:
    # status-port exposes a /healthz/ready endpoint that can be used with GKE Ingress health checks
    - name: status-port
      port: 15021
      protocol: TCP
      targetPort: 15021
    # Any ports exposed in Gateway resources should be exposed here.
    - name: http2
      port: 80
    - name: https
      port: 443
  selector:
    istio: ingressgateway
    app: istio-ingressgateway # kpt-set: ${name}
  type: LoadBalancer
